# gtfsdb_ext

./: .gitignore  README.md  TODO.txt  pyproject.toml
ott/gtfsdb/ext/: query.py  utils.py
ott/gtfsdb/ext/pelias/export/: park_ride.py  stops.py  utils.py
ott/gtfsdb/ext/pelias_export/: stops.py
ott/gtfsdb/ext/shared_stops/: cmdline.py  db.py  process.py  query.py  report.py  service.py  utils.py
ott/gtfsdb/ext/shared_stops/data/: shared_stops.csv  shared_stops.sql
ott/gtfsdb/ext/shared_stops/tmpl/: csv.mako  example-sorting-table.html  report.mako  report_old.mako  scripts.mako
scripts/: base.sh  create.sh  current.sh  drop.sh  file.sh  gtfs.sh  load.sh  load_gtfs.sh  patch_gtfs.sh  schemas.sh  shapes.sh  shared-stops.sh  views.sh
scripts/export/: geoserver.sh  pelias.sh  shared-stops.sh
