virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "gtfsdb_ext"
version = "0.0.1"
description = "gtfsdb postprocess tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/gtfsdb/ext"}]

[tool.poetry.dependencies]
mako = "1.1.6"
python = "^3.6"

"ott.utils" = { path = "../utils/", develop = true }
gtfsdb = { path = "../gtfsdb/", develop = true }
#"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}
#gtfsdb = {git = "https://github.com/OpenTransitTools/gtfsdb.git", branch = "rtp"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
gtfsdb-load = "gtfsdb.scripts:gtfsdb_load"
gtfsdb-current-load = "gtfsdb.scripts:current_tables_cmdline"

update-shared-stops = "ott.gtfsdb.ext.shared_stops.process:update_shared_stops"
shared-stops-report = "ott.gtfsdb.ext.shared_stops.report:create_report"
